monticore-generator/src/test/resources/cocos/invalid/A0142/A0142.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0142;

grammar A0142 {

  Foo = key("foo");

}
